--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "pinia": "^2.0.30",
         "pinia-plugin-persistedstate": "^3.0.2",
         "vue-advanced-cropper": "^2.8.8",
